# Dual-Arm-Franka-Control-MTP

./: .gitignore  .gitmodules  frames.gv
dual_arm_control/: .gitmodules  CMakeLists.txt  package.xml  setup.py
dual_arm_control/launch/: grasp_prediction.launch  grasp_prediction_services.launch  grasp_record.launch  gripper_test.launch  handoff_demo.launch  initialize.launch  perception.launch  perception_clients.launch  record.launch
dual_arm_control/scripts/: fastsam_client.py  fastsam_server.py  go_to_pose.py  grasp_client.py  grasp_prediction_node.py  grasp_server.py  gripper_move.py  handover_sequence.py  record_grasps.py  record_poses.py  start_fastsam_server.sh  start_grasp_servers.sh  start_graspgen_server.sh  teleop_keyboard.py
dual_arm_control/scripts/Perception/: combined_client.py  combined_client_srv.py  combined_server.py  grasp_server.py
dual_arm_control/scripts/Perception/FastSAM/: fastsam_client.py  fastsam_server.py
dual_arm_control/scripts/Perception/Grasp/: grasp_client.py  grasp_server.py
dual_arm_control/src/dual_arm_control/: ArmController.py  GripperController.py  __init__.py
dual_arm_control/srv/: GetGrasps.srv
dual_arm_control/worlds/: dual_panda_with_object.xml.xacro  object.xacro  plate.xacro
