<?xml version="1.0"?>
<package format="2">
  <name>dual_arm_control</name>
  <version>0.0.0</version>
  <description>Scripts to control a dual panda arm setup for a handoff task.</description>

  <maintainer email="sukhvansh@todo.todo">sukhvansh</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>actionlib</depend>
  <depend>franka_gripper</depend>
  <depend>franka_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>franka_mujoco</depend>
  <depend>message_runtime</depend>
  
</package>

